# mod-vhost-ldap-ng

./: AUTHORS  INSTALL  Makefile  Makefile.in  README  cn={0}mod_vhost_ldap_ng.ldif  config.h.in  configure  configure.ac  mod_vhost_ldap.c  mod_vhost_ldap_ng.c  mod_vhost_ldap_ng.schema  vhost_ldap_ng.conf.dist  vhost_ldap_ng.load.dist
